--- a/PositionIn/Wallet/PositionIn.WalletViewController.xib
+++ b/PositionIn/Wallet/PositionIn.WalletViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WalletViewController" customModule="PositionIn" customModuleProvider="target">
@@ -25,9 +25,8 @@
                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="6kJ-lT-anm">
                     <rect key="frame" x="10" y="12" width="580" height="29"/>
                     <segments>
-                        <segment title="Inventory"/>
-                        <segment title="Sold"/>
-                        <segment title="Purchased"/>
+                        <segment title="Purchases"/>
+                        <segment title="My Donations"/>
                     </segments>
                     <color key="tintColor" red="0.92941176469999998" green="0.1058823529" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                     <connections>
@@ -45,7 +44,7 @@
                 <constraint firstItem="6kJ-lT-anm" firstAttribute="top" secondItem="bFi-DP-Mcf" secondAttribute="top" constant="12" id="ldZ-rw-hFc"/>
                 <constraint firstItem="re5-8r-KZn" firstAttribute="leading" secondItem="bFi-DP-Mcf" secondAttribute="leading" id="xRk-pc-uH6"/>
             </constraints>
-            <point key="canvasLocation" x="193" y="218"/>
+            <point key="canvasLocation" x="-25" y="215"/>
         </view>
     </objects>
 </document>
